shared preferences added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SklepAllegro</string>
+    <string name="shared_preferences">shared_preferences</string>
 </resources>
