--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SklepAllegro</string>
     <string name="shared_preferences">shared_preferences</string>
+    <string name="shared_preferences_visible">visible_item</string>
+    <string name="intent_offer">offer</string>
 </resources>
